hopefully fixed spacing and sizing on smaller screens

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -3,23 +3,26 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  min-width: 100vw;
+  max-width: 100vw;
   align-items: center;
-  // justify-content: space-between;
+  justify-content: center;
 }
 
 .header {
   width: 100%;
   max-width: 550px;
-  height: 9vh;
+  min-height: 10%;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 2vh;
   border-bottom: 2px solid black;
 }
 
 .logo {
   pointer-events: none;
-  height: 8vh;
+  height: 5%;
   position: absolute;
   left: 0;
   top: 0;
